objects/Employment_Website__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Budget__c</fullName>
        <label>Maximum Budget</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_per_Post__c</fullName>
        <label>Price per Post</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Adress__c</fullName>
        <label>Web Adress</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Employment Website</label>
    <nameField>
        <label>Employment Website Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Websites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>